--- a/.github/workflows/generate-checklists.yml
+++ b/.github/workflows/generate-checklists.yml
@@ -30,4 +30,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: PDFs
-          path: *.pdf
+          path: |
+            *.pdf
