--- a/.github/workflows/generate-checklists.yml
+++ b/.github/workflows/generate-checklists.yml
@@ -21,7 +21,7 @@ jobs:
         run: playwright install chromium
 
       - name: Generate PDFs
-        run: python generate_html.py
+        run: python ./.github/workflows/generate_html.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
